apply plugin: 'java'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

repositories {
  jcenter()
  mavenCentral()
}
configurations {
    invoker
}

dependencies {
  // Every function needs this dependency to get the Functions Framework API.
  compileOnly 'com.google.cloud.functions:functions-framework-api:1.1.4'

  // To run function locally using Functions Framework's local invoker
  invoker 'com.google.cloud.functions.invoker:java-function-invoker:1.4.1'

  implementation 'com.google.apis:google-api-services-calendar:v3-rev20250115-2.0.0'
  implementation 'com.google.api-client:google-api-client:2.4.1'
  implementation 'com.google.oauth-client:google-oauth-client-jetty:1.35.0'

  implementation 'ch.qos.logback:logback-classic:1.5.17'
  implementation 'ch.qos.logback:logback-core:1.5.17'

  compileOnly 'org.projectlombok:lombok:1.18.36'
  annotationProcessor 'org.projectlombok:lombok:1.18.36'

  // These dependencies are only used by the tests.
  testImplementation 'junit:junit:4.13.2'
  testImplementation 'com.google.truth:truth:1.4.2'


}

// Register a "runFunction" task to run the function locally
tasks.register("runFunction", JavaExec) {
  getMainClass().set( 'com.google.cloud.functions.invoker.runner.Invoker')
  classpath(configurations.invoker)
  inputs.files(configurations.runtimeClasspath, sourceSets.main.output)
  args(
    '--target', project.findProperty('run.functionTarget') ?: 'org.ipuppyp.google.calendar.sync2.function.CalendarSyncFunction',
    '--port', project.findProperty('run.port') ?: 8080
  )
  doFirst {
    args('--classpath', files(configurations.runtimeClasspath, sourceSets.main.output).asPath)
  }
}

tasks.register('deployFunction') {
  doFirst {
    exec {
      workingDir '.'
      commandLine 'cmd', '/c', 'gcloud functions deploy calendarSync --entry-point org.ipuppyp.google.calendar.sync2.function.CalendarSyncFunction --runtime java21 --trigger-http --memory 512MB --update-secrets=/secrets/google-calendar-synch-credentials.json=projects/842556296685/secrets/google-calendar-synch-credentials:latest,/secrets/tokens/StoredCredential=projects/842556296685/secrets/StoredCredential:latest -q'
    }
  }
}